// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ip-allow > Add IP allow - Primary > test 1`] = `
"id: test
name: test_project
IP_addresses:
  - 127.0.0.1
  - 192.168.10.1-192.168.10.15
  - 192.168.1.1
primary_branch_only: true
"
`;

exports[`ip-allow > Add IP allow - Protected > test 1`] = `
"id: test
name: test_project
IP_addresses:
  - 127.0.0.1
  - 192.168.10.1-192.168.10.15
  - 192.168.1.1
protected_branches_only: true
"
`;

exports[`ip-allow > Remove IP allow > test 1`] = `
"id: test
name: test_project
IP_addresses: []
primary_branch_only: false
"
`;

exports[`ip-allow > Reset IP allow > test 1`] = `
"id: test
name: test_project
IP_addresses: []
primary_branch_only: false
"
`;

exports[`ip-allow > Reset IP allow to new list > test 1`] = `
"id: test
name: test_project
IP_addresses:
  - 192.168.2.2
primary_branch_only: false
"
`;

exports[`ip-allow > list IP Allow with single-project > test 1`] = `
"id: test-project-123456
name: ""
IP_addresses:
  - 192.168.1.1
primary_branch_only: false
"
`;

exports[`ip-allow > list IP allow > test 1`] = `
"id: test
name: test_project
IP_addresses:
  - 192.168.1.1
primary_branch_only: false
"
`;
